src/T1 - Visitor/src/ADSL.jjt
options {
  STATIC = false;
  VISITOR = true;
  MULTI=true; // É útil para simplificar a gramática, permitindo a definição uma regra que, por exemplo, crie um nó para cada elemento em uma lista ou em uma sequência de operações.
  TRACK_TOKENS = true; //o parser armazena o primeiro e o último token que contribuíram para a criação de cada nó da AST
}

PARSER_BEGIN(ADSL)

import java.io.*;

public class ADSL {
  public static void main(String[] args) throws ParseException {
    if (args.length == 0) {
      System.err.println("Uso: java ADSL <arquivo.txt>");
      return;
    }
    
    try {
      FileInputStream input = new FileInputStream(args[0]);
      ADSL parser = new ADSL(input);
      SimpleNode root = parser.Start();
      root.jjtAccept(new ArduinoVisitor(), null);
    } catch (FileNotFoundException e) {
      System.err.println("Arquivo não encontrado: " + args[0]);
    }
  }
}
PARSER_END(ADSL)

// Palavras reservadas
TOKEN: {
  <CONFIG: "Config">
| <EXECUTE: "Execute">
| <ENTRADA: "Entrada">
| <SAIDA: "Saida">
| <ESPERA: "Espere">
| <MONITOR: "Monitor">
| <REPITA: "repita"> 
| <FUNCAO: "funcao">
| <RETORNE: "retorne">
| <VOID: "void">

// Comandos de leitura e escrita
| <LEIA: "Leia">
| <ESCREVA: "Escreva">
| <ESCREVA_PWM: "EscrevaPWM">
| <ESCREVA_MON: "EscrevaMon">

// Estruturas de controle
| <SE: "se">
| <SENAO: "senao">

// Unidades de tempo
| <NS: "ns">
| <MS: "ms">
| <S: "s">
| <MIN: "min">
| <H: "h">

// Frequências do Serial Monitor
| <FREQ_300: "300">
| <FREQ_600: "600">
| <FREQ_1200: "1200">
| <FREQ_2400: "2400">
| <FREQ_4800: "4800">
| <FREQ_9600: "9600">
| <FREQ_14400: "14400">
| <FREQ_19200: "19200">
| <FREQ_28800: "28800">
| <FREQ_38400: "38400">
| <FREQ_57600: "57600">
| <FREQ_115200: "115200">

// Tipos de variáveis
| <BYTE: "byte">
| <INT: "int">
| <UNSIGNED_INT: "unsigned int">
| <LONG: "long">
| <UNSIGNED_LONG: "unsigned long">
| <FLOAT: "real">
| <CHAR: "char">
| <STRING_TYPE: "String">
| <BOOLEAN: "Boolean">
}

// Operadores
TOKEN: {
  < ASSIGN: "=" >
| < GT: ">" >
| < LT: "<" >
| < BANG: "!" >
| < TILDE: "~" >
| < HOOK: "?" >
| < COLON: ":" >
| < EQ: "==" >
| < LE: "<=" >
| < GE: ">=" >
| < NE: "!=" >
| < SC_OR: "||" >
| < SC_AND: "&&" >
| < CONCAT: "++" >
| < PLUS: "+" >
| < MINUS: "-" >
| < STAR: "*" >
| < SLASH: "/" >
| < BIT_AND: "&" >
| < BIT_OR: "|" >
| < XOR: "^" >
| < REM: "%" >
}

// Literais e identificadores
TOKEN: {
  <NUM_FLT: (["0"-"9"])+ "." (["0"-"9"])+ >
| <NUM_INT: (["0"-"9"])+ >
| <PINO_ANALOGICO: "A" (["0"-"5"]) >
| <STRING: "\"" (~["\""])* "\"">
| <IDENTIFIER: ["a"-"z","A"-"Z","_"] (["a"-"z","A"-"Z","_","0"-"9"])* >
}

TOKEN: { /* COMMENTS */
  <SINGLE_LINE_COMMENT: "//" (~["\n","\r"])* ("\n"|"\r"|"\r\n")?>
| <MULTI_LINE_COMMENT: "/*" (~["*"])* "*" ("*" | (~["*","/"] (~["*"])* "*"))* "/">
| <FORMAL_COMMENT: "/**" (~["*"])* "*" ("*" | (~["*","/"] (~["*"])* "*"))* "/">
}

SKIP : /* WHITE SPACE */
{
  " "
| "\t"
| "\n"
| "\r"
| "\f"
}

TOKEN : /* SEPARATORS */
{
  < LPAREN: "(" >
| < RPAREN: ")" >
| < LBRACE: "{" >
| < RBRACE: "}" >
| < LBRACKET: "[" >
| < RBRACKET: "]" >
| < SEMICOLON: ";" >
| < COMMA: "," >
| < DOT: "." >
}

SimpleNode Start() #Start:
{}
{
  (
    Config()
  | Execute() 
  | Funcao()
  | SingleLineComment()
  | MultiLineComment()
  | FormalComment()
  | DecVar()
  )*
  <EOF>
  { return jjtThis; }
}

void Funcao() #Funcao:
{}
{
  <FUNCAO> <IDENTIFIER> "(" (Parametros())? ")" ( ":" TipoRetorno() )? "{" (
    Comando()
  | SingleLineComment()
  | MultiLineComment()
  | FormalComment()
  | Retorne()
  )* "}"
}

void Parametros() #Parametros:
{}
{
  Parametro() ( "," Parametro() )*
}

void Parametro() #Parametro:
{}
{
  TiposVar() <IDENTIFIER>
}

void TipoRetorno() #TipoRetorno:
{}
{
  TiposVar() | <VOID>
}

void Retorne() #Retorne:
{}
{
  <RETORNE> Expressao() ";"
}

// Chamada de função
void ChamadaFuncao() #ChamadaFuncao:
{}
{
  <IDENTIFIER> "(" (Argumentos())? ")" ";"
}

void Argumentos() #Argumentos:
{}
{
  Expressao() ( "," Expressao() )*
}

void Config() #Config:
{}
{
  <CONFIG> "{" (
    PinMode()
  | FreqMonitor()
  | DecVar()
  | SingleLineComment()
  | MultiLineComment()
  | FormalComment()
  )* "}"
}

void Execute() #Execute:
{}
{
  <EXECUTE> "{" (
    Comando()
  | SingleLineComment()
  | MultiLineComment()
  | FormalComment()
  )* "}"
}

void PinMode() #PinMode:
{}
{
  ( <ENTRADA> | <SAIDA> ) Pinos() ";"
}

void Pinos() #Pinos:
{}
{
  ( PinosD() | PinosA() )
}

void PinosD() #PinosD:
{Token t;}
{
  t=<NUM_INT>
  {
    // Validação para pinos digitais (0-13)
    int pino = Integer.parseInt(t.image);
    if (pino < 0 || pino > 13) {
      throw new ParseException("Pino digital deve estar entre 0 e 13: " + pino);
    }
  }
}

void PinosA() #PinosA:
{}
{
  <PINO_ANALOGICO>
}

void PinosPWM() #PinosPWM:
{Token t;}
{
  t=<NUM_INT>
  {
    // Validação para pinos PWM (3,5,6,9,10,11)
    int pino = Integer.parseInt(t.image);
    int[] pwmPins = {3,5,6,9,10,11};
    boolean isValid = false;
    for (int pin : pwmPins) {
      if (pino == pin) {
        isValid = true;
        break;
      }
    }
    if (!isValid) {
      throw new ParseException("Pino PWM deve ser 3,5,6,9,10 ou 11: " + pino);
    }
  }
}

void FreqMonitor() #FreqMonitor:
{}
{
  <MONITOR> Frequencia() ";"
}

void Frequencia() #Frequencia:
{}
{
  (
    <FREQ_300> | <FREQ_600> | <FREQ_1200> | <FREQ_2400> | <FREQ_4800> 
  | <FREQ_9600> | <FREQ_14400> | <FREQ_19200> | <FREQ_28800> | <FREQ_38400> 
  | <FREQ_57600> | <FREQ_115200>
  )
}

void Delay() #Delay:
{}
{
  <ESPERA> ValorTempo() UnidadeTempo() ";"
}

void ValorTempo() #ValorTempo:
{Token t;}
{
  t=<NUM_INT>
}

void UnidadeTempo() #UnidadeTempo:
{}
{
  ( <NS> | <MS> | <S> | <MIN> | <H> )
}

// Comando de leitura unificado (Analog e Digital)
void Read() #Read:
{}
{
  <LEIA> 
  (
    LOOKAHEAD( Pinos() ) Pinos()
  | Expressao()
  )
  ";"
}

void DigitalWrite() #DigitalWrite:
{}
{
  <ESCREVA> 
  (
    LOOKAHEAD( Pinos() ) Pinos()
  | Expressao()
  )
  Expressao() ";"
}

void AnalogWrite() #AnalogWrite:
{}
{
  <ESCREVA_PWM>
  (
    LOOKAHEAD( PinosPWM() ) PinosPWM()
  | Expressao()
  )
  Expressao() ";"
}

void ValorDigital() #ValorDigital:
{Token t;}
{
  t=<NUM_INT>
  {
    // Validação para valores digitais (0 ou 1)
    int valor = Integer.parseInt(t.image);
    if (valor != 0 && valor != 1) {
      throw new ParseException("Valor digital deve ser 0 ou 1: " + valor);
    }
  }
}

void ValorAnalogico() #ValorAnalogico:
{Token t;}
{
  t=<NUM_INT>
  {
    // Validação para valores analógicos/PWM (0-255)
    int valor = Integer.parseInt(t.image);
    if (valor < 0 || valor > 255) {
      throw new ParseException("Valor PWM deve estar entre 0 e 255: " + valor);
    }
  }
}

void Repita() #Repita:
{}
{
  <REPITA> Expressao() "{" BlocoRepita() "}"
}

void BlocoRepita() #BlocoRepita:
{}
{
  (
    Comando()
  | SingleLineComment()
  | MultiLineComment()
  | FormalComment()
  )*
}

void Comando() #Comando:
{}
{
  ( 
    PinMode() 
  | Delay() 
  | Read() 
  | DigitalWrite() 
  | AnalogWrite() 
  | SerialPrint() 
  | DecVar() 
  | SeSenao() 
  | Repita() 
  | LOOKAHEAD( <IDENTIFIER> "=" ) Atribuicao()
  | LOOKAHEAD( <IDENTIFIER> "(" ) ChamadaFuncao()
  )
}

void SingleLineComment() #SingleLineComment : {}
{
  <SINGLE_LINE_COMMENT>
}

void MultiLineComment() #MultiLineComment : {}
{
  <MULTI_LINE_COMMENT>
}

void FormalComment() #FormalComment : {}
{
  <FORMAL_COMMENT>  
}

// Comando de escrita no monitor serial
void SerialPrint() #SerialPrint:
{}
{
  <ESCREVA_MON> "(" Expressao() ")" ";"
}

// Declaração de variáveis
void DecVar() #DecVar:
{}
{
  TiposVar() <IDENTIFIER> ( "=" Inicializador() )? ";"
}

void TiposVar() #TiposVar:
{}
{
  (
    <BYTE>
  | <INT>
  | <UNSIGNED_INT>
  | <LONG>
  | <UNSIGNED_LONG>
  | <FLOAT>
  | <CHAR>
  | <STRING_TYPE>
  | <BOOLEAN>
  )
}

void Inicializador() #Inicializador:
{Token t;}
{
  (
    Expressao()
  )
}

// Estrutura condicional
void SeSenao() #SeSenao:
{}
{
  <SE> "(" Condicao() ")" "{" BlocoSe() "}" ( <SENAO> "{" BlocoSenao() "}" )?
}

void BlocoSe() #BlocoSe:
{}
{
  (
    Comando()
  | SingleLineComment()
  | MultiLineComment()
  | FormalComment()
  )*
}

void BlocoSenao() #BlocoSenao:
{}
{
  (
    Comando()
  | SingleLineComment()
  | MultiLineComment()
  | FormalComment()
  )*
}

void Condicao() #Condicao:
{}
{
  ExpressaoBooleana()
}

// Atribuição de variáveis
void Atribuicao() #Atribuicao:
{}
{
  <IDENTIFIER> "=" Expressao() ";"
}

void Expressao() #Expressao:
{}
{
  ExpressaoBooleana()
}

void ExpressaoBooleana() #ExpressaoBooleana:
{}
{
  ExpressaoOu()
}

void ExpressaoOu() #ExpressaoOu:
{}
{
  ExpressaoE() ( <SC_OR> ExpressaoE() )*
}

void ExpressaoE() #ExpressaoE:
{}
{
  ExpressaoRelacional() ( <SC_AND> ExpressaoRelacional() )*
}

void ExpressaoRelacional() #ExpressaoRelacional:
{}
{
  ExpressaoAditiva() ( ( <LT> | <GT> | <LE> | <GE> | <EQ> | <NE> ) ExpressaoAditiva() )?
}

void ExpressaoAditiva() #ExpressaoAditiva:
{}
{
  ExpressaoMultiplicativa() 
  ( 
    LOOKAHEAD( ( <PLUS> | <MINUS> ) ExpressaoMultiplicativa() )
    ( <PLUS> | <MINUS> ) ExpressaoMultiplicativa() 
  )*
}

void ExpressaoMultiplicativa() #ExpressaoMultiplicativa:
{}
{
  ExpressaoUnaria() 
  ( 
    LOOKAHEAD( ( <STAR> | <SLASH> | <REM> ) ExpressaoUnaria() )
    ( <STAR> | <SLASH> | <REM> ) ExpressaoUnaria() 
  )*
}

void ExpressaoUnaria() #ExpressaoUnaria:
{}
{
  ( ( <PLUS> | <MINUS> | <BANG> | <TILDE> ) ExpressaoUnaria() ) | ExpressaoPrimaria()
}

void ExpressaoPrimaria() #ExpressaoPrimaria:
{}
{
  (
    ValorNumerico()
  | <STRING>
  | LOOKAHEAD( <IDENTIFIER> "(" ) ChamadaFuncaoExpressao()
  | <IDENTIFIER>
  | LeiaExpressao()
  | "(" ExpressaoBooleana() ")"
  )
}

void ChamadaFuncaoExpressao() #ChamadaFuncaoExpressao:
{}
{
  <IDENTIFIER> "(" (Argumentos())? ")"
}

void LeiaExpressao() #LeiaExpressao:
{}
{
  <LEIA> Pinos()
}

void ValorNumerico() #ValorNumerico:
{Token t;}
{
  (t=<NUM_INT> | t=<NUM_FLT>)
}
