src/T1 - Visitor/src/ADSL.java
/* Generated By:JJTree&JavaCC: Do not edit this line. ADSL.java */
import java.io.*;

public class ADSL/*@bgen(jjtree)*/implements ADSLTreeConstants, ADSLConstants {/*@bgen(jjtree)*/
  protected JJTADSLState jjtree = new JJTADSLState();public static void main(String[] args) throws ParseException {
    if (args.length == 0) {
      System.err.println("Uso: java ADSL <arquivo.txt>");
      return;
    }

    try {
      FileInputStream input = new FileInputStream(args[0]);
      ADSL parser = new ADSL(input);
      SimpleNode root = parser.Start();
      root.jjtAccept(new ArduinoVisitor(), null);
    } catch (FileNotFoundException e) {
      System.err.println("Arquivo n\u00e3o encontrado: " + args[0]);
    }
  }

  final public SimpleNode Start() throws ParseException {
 /*@bgen(jjtree) Start */
  ASTStart jjtn000 = new ASTStart(JJTSTART);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case CONFIG:
        case EXECUTE:
        case FUNCAO:
        case BYTE:
        case INT:
        case UNSIGNED_INT:
        case LONG:
        case UNSIGNED_LONG:
        case FLOAT:
        case CHAR:
        case STRING_TYPE:
        case BOOLEAN:
        case SINGLE_LINE_COMMENT:
        case MULTI_LINE_COMMENT:
        case FORMAL_COMMENT:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case CONFIG:
          Config();
          break;
        case EXECUTE:
          Execute();
          break;
        case FUNCAO:
          Funcao();
          break;
        case SINGLE_LINE_COMMENT:
          SingleLineComment();
          break;
        case MULTI_LINE_COMMENT:
          MultiLineComment();
          break;
        case FORMAL_COMMENT:
          FormalComment();
          break;
        case BYTE:
        case INT:
        case UNSIGNED_INT:
        case LONG:
        case UNSIGNED_LONG:
        case FLOAT:
        case CHAR:
        case STRING_TYPE:
        case BOOLEAN:
          DecVar();
          break;
        default:
          jj_la1[1] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      jj_consume_token(0);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    jjtn000.jjtSetLastToken(getToken(0));
    {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
      jjtn000.jjtSetLastToken(getToken(0));
    }
    }
    throw new Error("Missing return statement in function");
  }

  final public void Funcao() throws ParseException {
 /*@bgen(jjtree) Funcao */
  ASTFuncao jjtn000 = new ASTFuncao(JJTFUNCAO);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      jj_consume_token(FUNCAO);
      jj_consume_token(IDENTIFIER);
      jj_consume_token(LPAREN);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BYTE:
      case INT:
      case UNSIGNED_INT:
      case LONG:
      case UNSIGNED_LONG:
      case FLOAT:
      case CHAR:
      case STRING_TYPE:
      case BOOLEAN:
        Parametros();
        break;
      default:
        jj_la1[2] = jj_gen;
        ;
      }
      jj_consume_token(RPAREN);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COLON:
        jj_consume_token(COLON);
        TipoRetorno();
        break;
      default:
        jj_la1[3] = jj_gen;
        ;
      }
      jj_consume_token(LBRACE);
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ENTRADA:
        case SAIDA:
        case ESPERA:
        case REPITA:
        case RETORNE:
        case LEIA:
        case ESCREVA:
        case ESCREVA_PWM:
        case ESCREVA_MON:
        case SE:
        case BYTE:
        case INT:
        case UNSIGNED_INT:
        case LONG:
        case UNSIGNED_LONG:
        case FLOAT:
        case CHAR:
        case STRING_TYPE:
        case BOOLEAN:
        case IDENTIFIER:
        case SINGLE_LINE_COMMENT:
        case MULTI_LINE_COMMENT:
        case FORMAL_COMMENT:
          ;
          break;
        default:
          jj_la1[4] = jj_gen;
          break label_2;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ENTRADA:
        case SAIDA:
        case ESPERA:
        case REPITA:
        case LEIA:
        case ESCREVA:
        case ESCREVA_PWM:
        case ESCREVA_MON:
        case SE:
        case BYTE:
        case INT:
        case UNSIGNED_INT:
        case LONG:
        case UNSIGNED_LONG:
        case FLOAT:
        case CHAR:
        case STRING_TYPE:
        case BOOLEAN:
        case IDENTIFIER:
          Comando();
          break;
        case SINGLE_LINE_COMMENT:
          SingleLineComment();
          break;
        case MULTI_LINE_COMMENT:
          MultiLineComment();
          break;
        case FORMAL_COMMENT:
          FormalComment();
          break;
        case RETORNE:
          Retorne();
          break;
        default:
          jj_la1[5] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      jj_consume_token(RBRACE);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
      jjtn000.jjtSetLastToken(getToken(0));
    }
    }
  }

  final public void Parametros() throws ParseException {
 /*@bgen(jjtree) Parametros */
  ASTParametros jjtn000 = new ASTParametros(JJTPARAMETROS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      Parametro();
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[6] = jj_gen;
          break label_3;
        }
        jj_consume_token(COMMA);
        Parametro();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
      jjtn000.jjtSetLastToken(getToken(0));
    }
    }
  }

  final public void Parametro() throws ParseException {
 /*@bgen(jjtree) Parametro */
  ASTParametro jjtn000 = new ASTParametro(JJTPARAMETRO);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      TiposVar();
      jj_consume_token(IDENTIFIER);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
      jjtn000.jjtSetLastToken(getToken(0));
    }
    }
  }

  final public void TipoRetorno() throws ParseException {
 /*@bgen(jjtree) TipoRetorno */
  ASTTipoRetorno jjtn000 = new ASTTipoRetorno(JJTTIPORETORNO);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BYTE:
      case INT:
      case UNSIGNED_INT:
      case LONG:
      case UNSIGNED_LONG:
      case FLOAT:
      case CHAR:
      case STRING_TYPE:
      case BOOLEAN:
        TiposVar();
        break;
      case VOID:
        jj_consume_token(VOID);
        break;
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
      jjtn000.jjtSetLastToken(getToken(0));
    }
    }
  }

  final public void Retorne() throws ParseException {
 /*@bgen(jjtree) Retorne */
  ASTRetorne jjtn000 = new ASTRetorne(JJTRETORNE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      jj_consume_token(RETORNE);
      Expressao();
      jj_consume_token(SEMICOLON);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
      jjtn000.jjtSetLastToken(getToken(0));
    }
    }
  }

// Chamada de função
  final public void ChamadaFuncao() throws ParseException {
 /*@bgen(jjtree) ChamadaFuncao */
  ASTChamadaFuncao jjtn000 = new ASTChamadaFuncao(JJTCHAMADAFUNCAO);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      jj_consume_token(IDENTIFIER);
      jj_consume_token(LPAREN);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LEIA:
      case BANG:
      case TILDE:
      case PLUS:
      case MINUS:
      case NUM_FLT:
      case NUM_INT:
      case STRING:
      case IDENTIFIER:
      case LPAREN:
        Argumentos();
        break;
      default:
        jj_la1[8] = jj_gen;
        ;
      }
      jj_consume_token(RPAREN);
      jj_consume_token(SEMICOLON);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
      jjtn000.jjtSetLastToken(getToken(0));
    }
    }
  }

  final public void Argumentos() throws ParseException {
 /*@bgen(jjtree) Argumentos */
  ASTArgumentos jjtn000 = new ASTArgumentos(JJTARGUMENTOS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      Expressao();
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[9] = jj_gen;
          break label_4;
        }
        jj_consume_token(COMMA);
        Expressao();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
      jjtn000.jjtSetLastToken(getToken(0));
    }
    }
  }

  final public void Config() throws ParseException {
 /*@bgen(jjtree) Config */
  ASTConfig jjtn000 = new ASTConfig(JJTCONFIG);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      jj_consume_token(CONFIG);
      jj_consume_token(LBRACE);
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ENTRADA:
        case SAIDA:
        case MONITOR:
        case BYTE:
        case INT:
        case UNSIGNED_INT:
        case LONG:
        case UNSIGNED_LONG:
        case FLOAT:
        case CHAR:
        case STRING_TYPE:
        case BOOLEAN:
        case SINGLE_LINE_COMMENT:
        case MULTI_LINE_COMMENT:
        case FORMAL_COMMENT:
          ;
          break;
        default:
          jj_la1[10] = jj_gen;
          break label_5;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ENTRADA:
        case SAIDA:
          PinMode();
          break;
        case MONITOR:
          FreqMonitor();
          break;
        case BYTE:
        case INT:
        case UNSIGNED_INT:
        case LONG:
        case UNSIGNED_LONG:
        case FLOAT:
        case CHAR:
        case STRING_TYPE:
        case BOOLEAN:
          DecVar();
          break;
        case SINGLE_LINE_COMMENT:
          SingleLineComment();
          break;
        case MULTI_LINE_COMMENT:
          MultiLineComment();
          break;
        case FORMAL_COMMENT:
          FormalComment();
          break;
        default:
          jj_la1[11] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      jj_consume_token(RBRACE);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
      jjtn000.jjtSetLastToken(getToken(0));
    }
    }
  }

  final public void Execute() throws ParseException {
 /*@bgen(jjtree) Execute */
  ASTExecute jjtn000 = new ASTExecute(JJTEXECUTE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      jj_consume_token(EXECUTE);
      jj_consume_token(LBRACE);
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ENTRADA:
        case SAIDA:
        case ESPERA:
        case REPITA:
        case LEIA:
        case ESCREVA:
        case ESCREVA_PWM:
        case ESCREVA_MON:
        case SE:
        case BYTE:
        case INT:
        case UNSIGNED_INT:
        case LONG:
        case UNSIGNED_LONG:
        case FLOAT:
        case CHAR:
        case STRING_TYPE:
        case BOOLEAN:
        case IDENTIFIER:
        case SINGLE_LINE_COMMENT:
        case MULTI_LINE_COMMENT:
        case FORMAL_COMMENT:
          ;
          break;
        default:
          jj_la1[12] = jj_gen;
          break label_6;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ENTRADA:
        case SAIDA:
        case ESPERA:
        case REPITA:
        case LEIA:
        case ESCREVA:
        case ESCREVA_PWM:
        case ESCREVA_MON:
        case SE:
        case BYTE:
        case INT:
        case UNSIGNED_INT:
        case LONG:
        case UNSIGNED_LONG:
        case FLOAT:
        case CHAR:
        case STRING_TYPE:
        case BOOLEAN:
        case IDENTIFIER:
          Comando();
          break;
        case SINGLE_LINE_COMMENT:
          SingleLineComment();
          break;
        case MULTI_LINE_COMMENT:
          MultiLineComment();
          break;
        case FORMAL_COMMENT:
          FormalComment();
          break;
        default:
          jj_la1[13] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      jj_consume_token(RBRACE);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
      jjtn000.jjtSetLastToken(getToken(0));
    }
    }
  }
